# TiendaVentaMass

./: CMakeLists.txt  LoginInicial.h  README.md  main.cpp
Controlador/: CategoriaControlador.h  ClienteControlador.h  DetalledeVentaControlador.h  ProductoControlador.cpp  ProductoControlador.h  VendedorControlador.h  VentaControlador.h
Modelo/: Categoria.h  Cliente.h  DetalledeVenta.h  Producto.cpp  Producto.h  Vendedor.h  Venta.h  Ventas.h
